# Complex-Networks-MAI

./: .gitignore  pyproject.toml
Assignments/Assignment 1/: A1.ipynb  A1.py  characterization.py  macroscopic_structure.txt  microscopic_structure.txt  models.py  utils.py
Assignments/Assignment 1/report/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  prompt.txt  references.bib
Assignments/Assignment 2/: A2.ipynb  A2.py  community_metrics_greedy.txt  community_metrics_infomap.txt  community_metrics_louvain.txt  primary_school.py  synthetic.py  utils.py
Assignments/Assignment 2/communities/: prr_0.02_greedy.clu  prr_0.02_infomap.clu  prr_0.02_louvain.clu  prr_0.04_greedy.clu  prr_0.04_infomap.clu  prr_0.04_louvain.clu  prr_0.06_greedy.clu  prr_0.06_louvain.clu  prr_0.08_greedy.clu  prr_0.08_louvain.clu  prr_0.0_greedy.clu  prr_0.0_infomap.clu  prr_0.0_louvain.clu  prr_0.12_greedy.clu  prr_0.12_infomap.clu  prr_0.12_louvain.clu  prr_0.14_greedy.clu  prr_0.14_infomap.clu  prr_0.14_louvain.clu  prr_0.16_greedy.clu  prr_0.16_louvain.clu  prr_0.18_greedy.clu  prr_0.1_greedy.clu  prr_0.1_louvain.clu  prr_0.22_infomap.clu  prr_0.24_greedy.clu  prr_0.26_greedy.clu  prr_0.26_infomap.clu  prr_0.28_greedy.clu  prr_0.2_greedy.clu  prr_0.2_infomap.clu  prr_0.32_greedy.clu  prr_0.34_louvain.clu  prr_0.52_infomap.clu  prr_0.54_infomap.clu  prr_0.58_infomap.clu  prr_0.66_infomap.clu  prr_0.6_infomap.clu  (+4 more)
Assignments/Assignment 3/: README.md  export_networks.py  main.py  notes.txt  plot_results.py  sis.py  sis_optimized.py  theoretical_predictions.py
(+49 files in other folders)
