[project]
name = "cn-practices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cdlib>=0.4.0",
    "infomap>=2.9.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "netwulf>=0.1.5",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyvis>=0.3.2",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
